--- a/gross_income.html
+++ b/gross_income.html
@@ -26,12 +26,12 @@
   </style>
 </head>
 <body>
-  <h1>Branch Gross Income Bar Chart</h1>
+  <h1>Branch Gross Income Rating</h1>
   <div id="chart"></div>
 
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script>
-    d3.csv("supermarket_sales - Sheet1.csv").then(function(data) {
+    d3.csv("data.csv").then(function(data) {
       // Calculate the sum of gross income for each branch
       const branchData = d3.rollup(data, v => d3.sum(v, d => parseFloat(d['gross income'])), d => d.Branch);
 
