--- a/payment_rating.html
+++ b/payment_rating.html
@@ -28,7 +28,7 @@
 
     <script>
         // Đọc dữ liệu từ tập tin CSV
-        d3.csv("data.csv").then(function (data) {
+        d3.csv("supermarket_sales.csv").then(function (data) {
             // Tạo biểu đồ
             drawChart(data);
         });
