--- a/gender.html
+++ b/gender.html
@@ -12,7 +12,7 @@
 
 <script>
     // Sử dụng D3.js để đọc và hiển thị dữ liệu từ file CSV
-    d3.csv("./data.csv")
+    d3.csv("./supermarket_sales.csv")
         .then(function (data) {
             // Lọc dữ liệu để chỉ chứa các cột "Customer type" có giá trị "Member" và "Gender"
             const filteredData = data.filter(function (d) {
