--- a/gross_income.html
+++ b/gross_income.html
@@ -31,7 +31,7 @@
 
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script>
-    d3.csv("data.csv").then(function(data) {
+    d3.csv("supermarket_sales.csv").then(function(data) {
       // Calculate the sum of gross income for each branch
       const branchData = d3.rollup(data, v => d3.sum(v, d => parseFloat(d['gross income'])), d => d.Branch);
 
