--- a/time.html
+++ b/time.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Line Graph with D3.js</title>
+  <title>Thống kê thời gian cao điểm của siêu thị</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
     #lineGraph {
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h1>Line Graph with D3.js</h1>
+  <h2>Thống kê thời gian cao điểm của siêu thị</h2>
   <div id="lineGraph"></div>
 
   <script>
