--- a/hao1.html
+++ b/hao1.html
@@ -334,7 +334,7 @@
                 .attr("x", width / 2)
                 .attr("y", height)
                 .style("text-anchor", "middle")
-                .text("City");
+                .text("Branch");
 
             // Thêm nhãn cho trục Y
             svg.append("text")
